--- a/styles.css
+++ b/styles.css
@@ -19,17 +19,70 @@ body {
     padding: 50px;
 }
 
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.fadeOut {
+    animation: fadeOut 2s;
+}
+
+.card {
+    width: 50%;
+    margin: 10px auto;
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.card-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.card-content-question, .card-content-answer {
+    margin: 5px 0;
+    font-size: 1.2em;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+
+.h4 {
+    font-size: 1.2em;
+    margin: 0;
+}
+
 .alert {
     display: flex;
-    justify-content: center;
     align-items: center;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 5px;
+    padding: 20px;
+    background-color: #f44336;
+    color: white;
 }
 
 .alert_text {
     margin-left: 10px;
+}
+
+.cardsList {
+    display: none;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.card-content {
+    flex: 1 1 20%;
+    box-sizing: border-box;
+    margin: 5px;
 }
 
 button {
@@ -47,4 +100,13 @@ input {
     border: 1px solid #007bff;
     border-radius: 5px;
     margin-right: 10px;
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
